--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             fiber and composite materials in automotive manufacturing, and active aero 
             technologies for performance cars</p>
 </div>
-<img src="R.jpg" height="10" width="220">
+<img src="R.jpg" height= auto width="200">
 
 <div class="project">
     <h1>Projects/Experiences</h1>
